responsive ui done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <a href="javascript-void:0">Coffee Shop</a>
         <a href="javascript-void:0">Leagues</a>
       </div>
+      <div class="menu-icon">
+        <i class="ri-menu-4-fill"></i>
+      </div>
     </div>
 
     <div id="main">
